# bill-parser-engine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_tests.py
data/: bill_example.md  small_legislative_bill_example.md
notebooks/: detailed_reconstruction_log_20250621_155840.txt  detailed_reconstruction_log_20250621_164928.txt  detailed_reconstruction_log_20250621_180512.txt  detailed_reconstruction_log_20250621_182240.txt  detailed_reconstruction_log_20250621_183212.txt  detailed_reconstruction_log_20250621_190722.txt  detailed_reconstruction_log_20250724_142008.txt  detailed_reconstruction_log_20250724_152245.txt  detailed_reconstruction_log_20250724_153022.txt  detailed_reconstruction_log_20250724_160938.txt  detailed_reconstruction_log_20250724_163803.txt  detailed_reconstruction_log_20250724_163922.txt  detailed_reconstruction_log_20250724_165030.txt  playground.ipynb
scripts/: demonstrate_reference_resolution.py  export_chunks.py  list_required_legifrance_articles.py  normalize_eu_law_markdown.py  normalize_fr_code_markdown.py  normalize_legislative_bill.py  probe_legifrance_tokens.py  run_decomposer.py  run_identifier_and_retriever.py  run_locator_and_linker.py  run_pipeline.py  run_reconstruction.py  run_reference_resolver.py  run_retriever_direct.py  run_target_identifier.py  split_eu_regulation.py  validate_chunk_file.py
specs/: Technical Brick 1: Normative Reference Resolver.md  focused_reference_resolution_approach.md  implementation_plan.md  legal_state_synthesizer_spec.md  lettered_subdivision_splitting_enhancement_spec.md  pipeline_overview.md  (+9 more)
(+751 files in other folders)
